--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Tetris Mini Game</title>
+  <title>Tetris with Buttons</title>
   <style>
     * { box-sizing: border-box; }
     body {
@@ -10,11 +10,12 @@
       color: white;
       font-family: sans-serif;
       display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
       flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
     }
+
     #tetris {
       display: grid;
       grid-template-columns: repeat(10, 30px);
@@ -22,16 +23,37 @@
       gap: 1px;
       background: #333;
     }
+
     .cell {
       width: 30px;
       height: 30px;
       background: #111;
     }
+
     .filled {
       background: #0ff;
     }
-    #score {
+
+    #controls {
       margin-top: 10px;
+      display: flex;
+      gap: 10px;
+      flex-wrap: wrap;
+      justify-content: center;
+    }
+
+    .btn {
+      background: #444;
+      border: none;
+      color: white;
+      padding: 10px 20px;
+      font-size: 16px;
+      border-radius: 8px;
+      cursor: pointer;
+    }
+
+    #score {
+      margin: 10px;
       font-size: 18px;
     }
   </style>
@@ -39,6 +61,13 @@
 <body>
   <div id="tetris"></div>
   <div id="score">Score: 0</div>
+
+  <div id="controls">
+    <button class="btn" onclick="moveLeft()">⬅️</button>
+    <button class="btn" onclick="rotate()">⟳</button>
+    <button class="btn" onclick="moveRight()">➡️</button>
+    <button class="btn" onclick="moveDown()">⬇️</button>
+  </div>
 
   <script>
     const tetris = document.getElementById('tetris');
@@ -58,35 +87,30 @@
     }
 
     const tetrominoes = [
-      // L
       [
         [1, width + 1, width * 2 + 1, 2],
         [width, width + 1, width + 2, width * 2 + 2],
         [1, width + 1, width * 2 + 1, width * 2],
         [width, width * 2, width * 2 + 1, width * 2 + 2]
       ],
-      // O
       [
         [0, 1, width, width + 1],
         [0, 1, width, width + 1],
         [0, 1, width, width + 1],
         [0, 1, width, width + 1]
       ],
-      // T
       [
         [1, width, width + 1, width + 2],
         [1, width + 1, width + 2, width * 2 + 1],
         [width, width + 1, width + 2, width * 2 + 1],
         [1, width, width + 1, width * 2 + 1]
       ],
-      // I
       [
         [1, width + 1, width * 2 + 1, width * 3 + 1],
         [width, width + 1, width + 2, width + 3],
         [1, width + 1, width * 2 + 1, width * 3 + 1],
         [width, width + 1, width + 2, width + 3]
       ],
-      // S
       [
         [width + 1, width + 2, 1, 2],
         [0, width, width + 1, width * 2 + 1],
@@ -182,12 +206,12 @@
             grid[index].classList.remove('filled');
           });
           const removed = grid.splice(i * width, width);
-          grid.unshift(...removed.map(() => {
+          for (let k = 0; k < width; k++) {
             const div = document.createElement('div');
             div.classList.add('cell');
             tetris.insertBefore(div, tetris.firstChild);
-            return div;
-          }));
+            grid.unshift(div);
+          }
         }
       }
     }
