--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Tetris with Buttons</title>
+  <title>Colorful Tetris</title>
   <style>
     * { box-sizing: border-box; }
     body {
       background: #121212;
       color: white;
-      font-family: sans-serif;
+      font-family: 'Segoe UI', sans-serif;
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -21,47 +21,61 @@
       grid-template-columns: repeat(10, 30px);
       grid-template-rows: repeat(20, 30px);
       gap: 1px;
-      background: #333;
+      background: #1e1e1e;
+      box-shadow: 0 0 15px #000;
+      border: 2px solid #333;
     }
 
     .cell {
       width: 30px;
       height: 30px;
-      background: #111;
+      background: #1e1e1e;
+      transition: background 0.1s ease;
     }
 
     .filled {
-      background: #0ff;
+      box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.5), 0 2px 5px rgba(0,0,0,0.4);
     }
 
-    #controls {
-      margin-top: 10px;
-      display: flex;
-      gap: 10px;
-      flex-wrap: wrap;
-      justify-content: center;
-    }
-
-    .btn {
-      background: #444;
-      border: none;
-      color: white;
-      padding: 10px 20px;
-      font-size: 16px;
-      border-radius: 8px;
-      cursor: pointer;
-    }
+    .color-0 { background-color: #f39c12; } /* L */
+    .color-1 { background-color: #f1c40f; } /* O */
+    .color-2 { background-color: #9b59b6; } /* T */
+    .color-3 { background-color: #1abc9c; } /* I */
+    .color-4 { background-color: #e74c3c; } /* S */
 
     #score {
       margin: 10px;
       font-size: 18px;
+    }
+
+    #controls {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 10px;
+    }
+
+    .btn {
+      background: #444;
+      color: white;
+      border: none;
+      padding: 10px 20px;
+      font-size: 16px;
+      border-radius: 8px;
+      cursor: pointer;
+      box-shadow: 0 4px #222;
+      transition: background 0.2s;
+    }
+
+    .btn:active {
+      transform: translateY(2px);
+      box-shadow: 0 2px #111;
     }
   </style>
 </head>
 <body>
   <div id="tetris"></div>
   <div id="score">Score: 0</div>
-
   <div id="controls">
     <button class="btn" onclick="moveLeft()">⬅️</button>
     <button class="btn" onclick="rotate()">⟳</button>
@@ -77,8 +91,8 @@
     const grid = [];
     let timerId;
     let score = 0;
+    let currentColor = 0;
 
-    // Create grid
     for (let i = 0; i < width * height; i++) {
       const cell = document.createElement('div');
       cell.classList.add('cell');
@@ -87,51 +101,34 @@
     }
 
     const tetrominoes = [
-      [
-        [1, width + 1, width * 2 + 1, 2],
-        [width, width + 1, width + 2, width * 2 + 2],
-        [1, width + 1, width * 2 + 1, width * 2],
-        [width, width * 2, width * 2 + 1, width * 2 + 2]
-      ],
-      [
-        [0, 1, width, width + 1],
-        [0, 1, width, width + 1],
-        [0, 1, width, width + 1],
-        [0, 1, width, width + 1]
-      ],
-      [
-        [1, width, width + 1, width + 2],
-        [1, width + 1, width + 2, width * 2 + 1],
-        [width, width + 1, width + 2, width * 2 + 1],
-        [1, width, width + 1, width * 2 + 1]
-      ],
-      [
-        [1, width + 1, width * 2 + 1, width * 3 + 1],
-        [width, width + 1, width + 2, width + 3],
-        [1, width + 1, width * 2 + 1, width * 3 + 1],
-        [width, width + 1, width + 2, width + 3]
-      ],
-      [
-        [width + 1, width + 2, 1, 2],
-        [0, width, width + 1, width * 2 + 1],
-        [width + 1, width + 2, 1, 2],
-        [0, width, width + 1, width * 2 + 1]
-      ]
+      [[1, width+1, width*2+1, 2], [width, width+1, width+2, width*2+2], [1, width+1, width*2+1, width*2], [width, width*2, width*2+1, width*2+2]], // L
+      [[0, 1, width, width+1], [0, 1, width, width+1], [0, 1, width, width+1], [0, 1, width, width+1]], // O
+      [[1, width, width+1, width+2], [1, width+1, width+2, width*2+1], [width, width+1, width+2, width*2+1], [1, width, width+1, width*2+1]], // T
+      [[1, width+1, width*2+1, width*3+1], [width, width+1, width+2, width+3], [1, width+1, width*2+1, width*3+1], [width, width+1, width+2, width+3]], // I
+      [[width+1, width+2, 1, 2], [0, width, width+1, width*2+1], [width+1, width+2, 1, 2], [0, width, width+1, width*2+1]] // S
     ];
 
     let currentPosition = 4;
     let currentRotation = 0;
-    let currentTetromino = tetrominoes[Math.floor(Math.random() * tetrominoes.length)];
+    let currentTetromino = getRandomTetromino();
+
+    function getRandomTetromino() {
+      const index = Math.floor(Math.random() * tetrominoes.length);
+      currentColor = index;
+      return tetrominoes[index];
+    }
 
     function draw() {
       currentTetromino[currentRotation].forEach(index => {
-        grid[currentPosition + index]?.classList.add('filled');
+        const cell = grid[currentPosition + index];
+        cell.classList.add('filled', 'color-' + currentColor);
       });
     }
 
     function undraw() {
       currentTetromino[currentRotation].forEach(index => {
-        grid[currentPosition + index]?.classList.remove('filled');
+        const cell = grid[currentPosition + index];
+        cell.classList.remove('filled', 'color-' + currentColor);
       });
     }
 
@@ -149,7 +146,7 @@
 
     function moveLeft() {
       undraw();
-      if (currentTetromino[currentRotation].every(index => (currentPosition + index) % width !== 0)) {
+      if (currentTetromino[currentRotation].every(i => (currentPosition + i) % width !== 0)) {
         currentPosition -= 1;
         if (checkCollision()) currentPosition += 1;
       }
@@ -158,7 +155,7 @@
 
     function moveRight() {
       undraw();
-      if (currentTetromino[currentRotation].every(index => (currentPosition + index) % width !== width - 1)) {
+      if (currentTetromino[currentRotation].every(i => (currentPosition + i) % width !== width - 1)) {
         currentPosition += 1;
         if (checkCollision()) currentPosition -= 1;
       }
@@ -167,27 +164,27 @@
 
     function rotate() {
       undraw();
-      const prevRotation = currentRotation;
+      const prev = currentRotation;
       currentRotation = (currentRotation + 1) % 4;
-      if (checkCollision()) currentRotation = prevRotation;
+      if (checkCollision()) currentRotation = prev;
       draw();
     }
 
     function checkCollision() {
-      return currentTetromino[currentRotation].some(index => {
-        const nextIndex = currentPosition + index;
-        return nextIndex >= width * height || grid[nextIndex].classList.contains('taken');
+      return currentTetromino[currentRotation].some(i => {
+        const index = currentPosition + i;
+        return index >= width * height || grid[index].classList.contains('taken');
       });
     }
 
     function freeze() {
-      currentTetromino[currentRotation].forEach(index => {
-        grid[currentPosition + index].classList.add('taken');
+      currentTetromino[currentRotation].forEach(i => {
+        grid[currentPosition + i].classList.add('taken');
       });
       checkLines();
       currentPosition = 4;
       currentRotation = 0;
-      currentTetromino = tetrominoes[Math.floor(Math.random() * tetrominoes.length)];
+      currentTetromino = getRandomTetromino();
       if (checkCollision()) {
         clearInterval(timerId);
         alert('Game Over');
@@ -202,8 +199,8 @@
           score += 10;
           scoreDisplay.textContent = 'Score: ' + score;
           row.forEach(index => {
-            grid[index].classList.remove('taken');
-            grid[index].classList.remove('filled');
+            grid[index].classList.remove('taken', 'filled', ...grid[index].classList);
+            grid[index].className = 'cell';
           });
           const removed = grid.splice(i * width, width);
           for (let k = 0; k < width; k++) {
@@ -216,14 +213,13 @@
       }
     }
 
-    function control(e) {
+    document.addEventListener('keydown', e => {
       if (e.key === 'ArrowLeft') moveLeft();
       if (e.key === 'ArrowRight') moveRight();
       if (e.key === 'ArrowDown') moveDown();
       if (e.key === 'ArrowUp') rotate();
-    }
+    });
 
-    document.addEventListener('keydown', control);
     draw();
     timerId = setInterval(moveDown, 500);
   </script>
