--- a/index.html
+++ b/index.html
@@ -1,21 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
-  <meta charset="UTF-8">
-  <title>Colorful Tetris</title>
+  <meta charset="UTF-8" />
+  <title>Tetris с рекордом</title>
   <style>
-    * { box-sizing: border-box; }
     body {
       background: #121212;
-      color: white;
-      font-family: 'Segoe UI', sans-serif;
+      color: #fff;
+      font-family: sans-serif;
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
       height: 100vh;
+      margin: 0;
     }
-
     #tetris {
       display: grid;
       grid-template-columns: repeat(10, 30px);
@@ -25,36 +24,31 @@
       box-shadow: 0 0 15px #000;
       border: 2px solid #333;
     }
-
     .cell {
       width: 30px;
       height: 30px;
       background: #1e1e1e;
       transition: background 0.1s ease;
     }
-
     .filled {
       box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.5), 0 2px 5px rgba(0,0,0,0.4);
     }
-
     .color-0 { background-color: #f39c12; } /* L */
     .color-1 { background-color: #f1c40f; } /* O */
     .color-2 { background-color: #9b59b6; } /* T */
     .color-3 { background-color: #1abc9c; } /* I */
     .color-4 { background-color: #e74c3c; } /* S */
-
-    #score {
-      margin: 10px;
+    #score, #highscore {
+      margin: 5px;
       font-size: 18px;
     }
-
     #controls {
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
       gap: 10px;
+      margin-top: 10px;
     }
-
     .btn {
       background: #444;
       color: white;
@@ -66,7 +60,6 @@
       box-shadow: 0 4px #222;
       transition: background 0.2s;
     }
-
     .btn:active {
       transform: translateY(2px);
       box-shadow: 0 2px #111;
@@ -75,7 +68,8 @@
 </head>
 <body>
   <div id="tetris"></div>
-  <div id="score">Score: 0</div>
+  <div id="score">Счёт: 0</div>
+  <div id="highscore">Рекорд: 0</div>
   <div id="controls">
     <button class="btn" onclick="moveLeft()">⬅️</button>
     <button class="btn" onclick="rotate()">⟳</button>
@@ -86,11 +80,14 @@
   <script>
     const tetris = document.getElementById('tetris');
     const scoreDisplay = document.getElementById('score');
+    const highscoreDisplay = document.getElementById('highscore');
     const width = 10;
     const height = 20;
     const grid = [];
     let timerId;
     let score = 0;
+    let highscore = localStorage.getItem('tetrisHighScore') || 0;
+    highscoreDisplay.textContent = 'Рекорд: ' + highscore;
     let currentColor = 0;
 
     for (let i = 0; i < width * height; i++) {
@@ -187,7 +184,12 @@
       currentTetromino = getRandomTetromino();
       if (checkCollision()) {
         clearInterval(timerId);
-        alert('Game Over');
+        alert('Игра окончена');
+        if (score > highscore) {
+          highscore = score;
+          localStorage.setItem('tetrisHighScore', highscore);
+          highscoreDisplay.textContent = 'Рекорд: ' + highscore;
+        }
       }
       draw();
     }
@@ -197,7 +199,7 @@
         const row = Array.from({length: width}, (_, j) => i * width + j);
         if (row.every(index => grid[index].classList.contains('taken'))) {
           score += 10;
-          scoreDisplay.textContent = 'Score: ' + score;
+          scoreDisplay.textContent = 'Счёт: ' + score;
           row.forEach(index => {
             grid[index].classList.remove('taken', 'filled', ...grid[index].classList);
             grid[index].className = 'cell';
