--- a/index.html
+++ b/index.html
@@ -1,229 +1,29 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>Tetris с рекордом</title>
-  <style>
-    body {
-      background: #121212;
-      color: #fff;
-      font-family: sans-serif;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-      margin: 0;
-    }
-    #tetris {
-      display: grid;
-      grid-template-columns: repeat(10, 30px);
-      grid-template-rows: repeat(20, 30px);
-      gap: 1px;
-      background: #1e1e1e;
-      box-shadow: 0 0 15px #000;
-      border: 2px solid #333;
-    }
-    .cell {
-      width: 30px;
-      height: 30px;
-      background: #1e1e1e;
-      transition: background 0.1s ease;
-    }
-    .filled {
-      box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.5), 0 2px 5px rgba(0,0,0,0.4);
-    }
-    .color-0 { background-color: #f39c12; } /* L */
-    .color-1 { background-color: #f1c40f; } /* O */
-    .color-2 { background-color: #9b59b6; } /* T */
-    .color-3 { background-color: #1abc9c; } /* I */
-    .color-4 { background-color: #e74c3c; } /* S */
-    #score, #highscore {
-      margin: 5px;
-      font-size: 18px;
-    }
-    #controls {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 10px;
-      margin-top: 10px;
-    }
-    .btn {
-      background: #444;
-      color: white;
-      border: none;
-      padding: 10px 20px;
-      font-size: 16px;
-      border-radius: 8px;
-      cursor: pointer;
-      box-shadow: 0 4px #222;
-      transition: background 0.2s;
-    }
-    .btn:active {
-      transform: translateY(2px);
-      box-shadow: 0 2px #111;
-    }
-  </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>KleinPublic</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div id="tetris"></div>
-  <div id="score">Счёт: 0</div>
-  <div id="highscore">Рекорд: 0</div>
-  <div id="controls">
-    <button class="btn" onclick="moveLeft()">⬅️</button>
-    <button class="btn" onclick="rotate()">⟳</button>
-    <button class="btn" onclick="moveRight()">➡️</button>
-    <button class="btn" onclick="moveDown()">⬇️</button>
-  </div>
+  <header>
+    <h1>KleinPublic</h1>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="upload.html">Upload</a>
+      <a href="profile.html">Profile</a>
+    </nav>
+  </header>
 
-  <script>
-    const tetris = document.getElementById('tetris');
-    const scoreDisplay = document.getElementById('score');
-    const highscoreDisplay = document.getElementById('highscore');
-    const width = 10;
-    const height = 20;
-    const grid = [];
-    let timerId;
-    let score = 0;
-    let highscore = localStorage.getItem('tetrisHighScore') || 0;
-    highscoreDisplay.textContent = 'Рекорд: ' + highscore;
-    let currentColor = 0;
+  <main>
+    <div id="postContainer" class="grid"></div>
+  </main>
 
-    for (let i = 0; i < width * height; i++) {
-      const cell = document.createElement('div');
-      cell.classList.add('cell');
-      tetris.appendChild(cell);
-      grid.push(cell);
-    }
+  <footer>
+    <p>&copy; 2025 KleinPublic</p>
+  </footer>
 
-    const tetrominoes = [
-      [[1, width+1, width*2+1, 2], [width, width+1, width+2, width*2+2], [1, width+1, width*2+1, width*2], [width, width*2, width*2+1, width*2+2]], // L
-      [[0, 1, width, width+1], [0, 1, width, width+1], [0, 1, width, width+1], [0, 1, width, width+1]], // O
-      [[1, width, width+1, width+2], [1, width+1, width+2, width*2+1], [width, width+1, width+2, width*2+1], [1, width, width+1, width*2+1]], // T
-      [[1, width+1, width*2+1, width*3+1], [width, width+1, width+2, width+3], [1, width+1, width*2+1, width*3+1], [width, width+1, width+2, width+3]], // I
-      [[width+1, width+2, 1, 2], [0, width, width+1, width*2+1], [width+1, width+2, 1, 2], [0, width, width+1, width*2+1]] // S
-    ];
-
-    let currentPosition = 4;
-    let currentRotation = 0;
-    let currentTetromino = getRandomTetromino();
-
-    function getRandomTetromino() {
-      const index = Math.floor(Math.random() * tetrominoes.length);
-      currentColor = index;
-      return tetrominoes[index];
-    }
-
-    function draw() {
-      currentTetromino[currentRotation].forEach(index => {
-        const cell = grid[currentPosition + index];
-        cell.classList.add('filled', 'color-' + currentColor);
-      });
-    }
-
-    function undraw() {
-      currentTetromino[currentRotation].forEach(index => {
-        const cell = grid[currentPosition + index];
-        cell.classList.remove('filled', 'color-' + currentColor);
-      });
-    }
-
-    function moveDown() {
-      undraw();
-      currentPosition += width;
-      if (checkCollision()) {
-        currentPosition -= width;
-        draw();
-        freeze();
-        return;
-      }
-      draw();
-    }
-
-    function moveLeft() {
-      undraw();
-      if (currentTetromino[currentRotation].every(i => (currentPosition + i) % width !== 0)) {
-        currentPosition -= 1;
-        if (checkCollision()) currentPosition += 1;
-      }
-      draw();
-    }
-
-    function moveRight() {
-      undraw();
-      if (currentTetromino[currentRotation].every(i => (currentPosition + i) % width !== width - 1)) {
-        currentPosition += 1;
-        if (checkCollision()) currentPosition -= 1;
-      }
-      draw();
-    }
-
-    function rotate() {
-      undraw();
-      const prev = currentRotation;
-      currentRotation = (currentRotation + 1) % 4;
-      if (checkCollision()) currentRotation = prev;
-      draw();
-    }
-
-    function checkCollision() {
-      return currentTetromino[currentRotation].some(i => {
-        const index = currentPosition + i;
-        return index >= width * height || grid[index].classList.contains('taken');
-      });
-    }
-
-    function freeze() {
-      currentTetromino[currentRotation].forEach(i => {
-        grid[currentPosition + i].classList.add('taken');
-      });
-      checkLines();
-      currentPosition = 4;
-      currentRotation = 0;
-      currentTetromino = getRandomTetromino();
-      if (checkCollision()) {
-        clearInterval(timerId);
-        alert('Игра окончена');
-        if (score > highscore) {
-          highscore = score;
-          localStorage.setItem('tetrisHighScore', highscore);
-          highscoreDisplay.textContent = 'Рекорд: ' + highscore;
-        }
-      }
-      draw();
-    }
-
-    function checkLines() {
-      for (let i = 0; i < height; i++) {
-        const row = Array.from({length: width}, (_, j) => i * width + j);
-        if (row.every(index => grid[index].classList.contains('taken'))) {
-          score += 10;
-          scoreDisplay.textContent = 'Счёт: ' + score;
-          row.forEach(index => {
-            grid[index].classList.remove('taken', 'filled', ...grid[index].classList);
-            grid[index].className = 'cell';
-          });
-          const removed = grid.splice(i * width, width);
-          for (let k = 0; k < width; k++) {
-            const div = document.createElement('div');
-            div.classList.add('cell');
-            tetris.insertBefore(div, tetris.firstChild);
-            grid.unshift(div);
-          }
-        }
-      }
-    }
-
-    document.addEventListener('keydown', e => {
-      if (e.key === 'ArrowLeft') moveLeft();
-      if (e.key === 'ArrowRight') moveRight();
-      if (e.key === 'ArrowDown') moveDown();
-      if (e.key === 'ArrowUp') rotate();
-    });
-
-    draw();
-    timerId = setInterval(moveDown, 500);
-  </script>
+  <script src="app.js"></script>
 </body>
 </html>
