--- a/profile.html
+++ b/profile.html
@@ -47,12 +47,12 @@
     import { getFirestore, collection, getDocs, addDoc, deleteDoc, doc } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-firestore.js";
 
     const firebaseConfig = {
-      apiKey: "YOUR_API_KEY",
-      authDomain: "YOUR_PROJECT_ID.firebaseapp.com",
-      projectId: "YOUR_PROJECT_ID",
-      storageBucket: "YOUR_PROJECT_ID.appspot.com",
-      messagingSenderId: "YOUR_SENDER_ID",
-      appId: "YOUR_APP_ID"
+      apiKey: "AIzaSyB9v_VN40gmsnpYsnbXDCA3vT4B9kEQ_iI",
+      authDomain: "anwell-7e6e9.firebaseapp.com",
+      projectId: "anwell-7e6e9",
+      storageBucket: "anwell-7e6e9.firebasestorage.app",
+      messagingSenderId: "179341518672",
+      appId: "1:179341518672:web:b9f81607208c3e35256e55"
     };
 
     const app = initializeApp(firebaseConfig);
